Kubernetes/Virtualmin/yamls/ig-virtualmin.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: virtualmin-service
  labels:
    app: virtualmin-service
  namespace: traefik-external
subsets:
- addresses:
  - ip: <virtualmin-ip>
    nodeName: virtualmin-service
  ports:
  - name: virtualmin
    port: 443
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: virtualmin-service
  labels:
    app: virtualmin-service
  namespace: traefik-external
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: virtualmin
    port: 443
    targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: webmin-service
  labels:
    app: webmin-service
  namespace: traefik-external
subsets:
- addresses:
  - ip: <webmin-ip>
    nodeName: webmin-service
  ports:
  - name: webmin
    port: 2087
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: webmin-service
  labels:
    app: webmin-service
  namespace: traefik-external
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: webmin
    port: 443
    targetPort: 2087
---
apiVersion: v1
kind: Endpoints
metadata:
  name: usermin-service
  labels:
    app: usermin-service
  namespace: traefik-external
subsets:
- addresses:
  - ip: <usermin-ip>
    nodeName: usermin-service
  ports:
  - name: usermin
    port: 2083
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: usermin-service
  labels:
    app: usermin-service
  namespace: traefik-external
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: usermin
    port: 443
    targetPort: 2083
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-virtualmin-https-redirect
  namespace: traefik-external
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-virtualmin-security
  namespace: traefik-external
spec:
  headers:
    hostsProxyHeaders:
      - "X-Forwarded-Host"
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
